cleaning up the code

--- a/index.html
+++ b/index.html
@@ -5,31 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>project-4</title>
+    <title>Mountain Travel</title>
 </head>
 
 <body>
-
+    <!--Start header-->
     <header class="header">
+        <nav class="navbar">
+            <div class="logo-container">
+                <div class="logo-holder">
+                    <h2 class="logo">Mountain Travel</h2>
+                </div>
+            </div>
+            <div class="list-container">
+                <div class="list-holder">
+                    <ul class="ul-list">
+                        <li><a href="#">Tours</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <!--end header-->
+    <!--Start hero-section-->
+    <section class="hero-section">
         <div class="hero-container">
             <div class="hero-image-holder">
-                <nav class="navbar">
-                    <div class="logo-container">
-                        <div class="logo-holder">
-                            <h2 class="logo">Mountain Travel</h2>
-                        </div>
-                    </div>
-                    <div class="list-container">
-                        <div class="list-holder">
-                            <ul class="ul-list">
-                                <li><a href="#">Tours</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Contact</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </nav>
-                <div class="header-text-container">
+                <div class="hero-text-container">
                     <div class="text-holder">
                         <h1>Travel The World</h1>
                         <p>He my polite be object oh change. Consider no mr am overcame </p>
@@ -38,7 +42,9 @@
                 </div>
             </div>
         </div>
-    </header>
+    </section>
+    <!--end hero-section-->
+
 
     <section class="padding-top-bottom">
         <div class="container"></div>
