--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/5a0dddbca3.js" crossorigin="anonymous"></script>
     <title>Mountain Travel</title>
 </head>
 
@@ -18,13 +19,22 @@
                 </div>
             </div>
             <div class="list-container">
-                <div class="list-holder">
-                    <ul class="ul-list">
-                        <li><a href="#">Tours</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
+                <div class="navbar-list" id="navbar-not-responsive">
+                    <!-- removing the custom transition will remove the lag-->
+                    <ul class="navbar-ul ">
+                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">About</a></li>
+                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Tours</a></li>
+                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Pricing</a></li>
+                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Contact</a></li>
                     </ul>
                 </div>
+            </div>
+            <div class="bar-container">
+                <input type="checkbox" id="check" onclick="myFunction()">
+                <label for="check" class="bar-icon-label">
+                    <i id="my-icon" class="fa fa-bars" aria-hidden="true"></i>
+                    <i style="display: none;" id="my-iconX"  class="fas fa-times" aria-hidden="true"></i>
+                </label>
             </div>
         </nav>
     </header>
