--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!--Start header-->
     <header class="header">
-        <nav class="navbar">
+        <nav id="navbar" class="navbar">
             <div class="logo-container">
                 <div class="logo-holder">
                     <h2 class="logo">Mountain Travel</h2>
@@ -22,7 +22,7 @@
                 <div class="navbar-list" id="navbar-not-responsive">
                     <!-- removing the custom transition will remove the lag-->
                     <ul class="navbar-ul ">
-                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">About</a></li>
+                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#about-us">About</a></li>
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Tours</a></li>
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Pricing</a></li>
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Contact</a></li>
@@ -55,10 +55,54 @@
     </section>
     <!--end hero-section-->
 
-
-    <section class="padding-top-bottom">
-        <div class="container"></div>
+    <!--Start about-us-->
+    <section id="about-us" class="about-us padding-top-bottom">
+        <div class="container">
+            <div class="about-text">
+                <h2 class="about-h2">About us</h2>
+                <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend
+                    you calling own excited painted.Contented attending smallness it oh ye unwilling. Turned favour man two but lovers. Suffer should if waited common person little oh. Improved civility graceful sex few smallest screened settling. Likely
+                    active her warmly has. </p>
+            </div>
+            <div class="outer-holder">
+                <div class="about-card">
+                    <div class="about-card-holder">
+                        <div class="card-image">
+                            <img class="hero-image" src="images/undraw_journey_lwlj.svg" alt="Journey image">
+                        </div>
+                        <div class="about-card-text">
+                            <h3 class="about-h2">Comfortable Journey</h3>
+                            <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. On it differed repeated wandered required in.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-card">
+                    <div class="about-card-holder">
+                        <div class="card-image">
+                            <img class="hero-image" src="images/undraw_best_place_r685.svg" alt="Journey image">
+                        </div>
+                        <div class="about-card-text">
+                            <h3 class="about-h2">Luxuries hotel</h3>
+                            <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. On it differed repeated wandered required in.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="about-card">
+                    <div class="about-card-holder">
+                        <div class="card-image">
+                            <img class="hero-image" src="images/undraw_destinations_fpv7.svg" alt="Journey image">
+                        </div>
+                        <div class="about-card-text">
+                            <h3 class="about-h2">Travel guide</h3>
+                            <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. On it differed repeated wandered required in.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+    <!--end about-us-->
+
 
     <script src="js/main.js"></script>
 </body>
