--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class="navbar-list" id="navbar-not-responsive">
                     <!-- removing the custom transition will remove the lag-->
                     <ul class="navbar-ul ">
-                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#about-us">About</a></li>
-                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Tours</a></li>
+                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#about-us">Tour</a></li>
+                        <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#destination">destination</a></li>
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Pricing</a></li>
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Contact</a></li>
                     </ul>
@@ -59,13 +59,12 @@
     <section id="about-us" class="about-us padding-top-bottom">
         <div class="container">
             <div class="about-text">
-                <h2 class="about-h2">About us</h2>
+                <h2 class="about-h2">Tour package</h2>
                 <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend
-                    you calling own excited painted.Contented attending smallness it oh ye unwilling. Turned favour man two but lovers. Suffer should if waited common person little oh. Improved civility graceful sex few smallest screened settling. Likely
-                    active her warmly has. </p>
+                    you calling own excited painted.Contented active her warmly has. </p>
             </div>
             <div class="outer-holder">
-                <div class="about-card">
+                <article class="about-card">
                     <div class="about-card-holder">
                         <div class="card-image">
                             <img class="hero-image" src="images/undraw_journey_lwlj.svg" alt="Journey image">
@@ -75,8 +74,8 @@
                             <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. On it differed repeated wandered required in.</p>
                         </div>
                     </div>
-                </div>
-                <div class="about-card">
+                </article>
+                <article class="about-card">
                     <div class="about-card-holder">
                         <div class="card-image">
                             <img class="hero-image" src="images/undraw_best_place_r685.svg" alt="Journey image">
@@ -86,8 +85,8 @@
                             <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. On it differed repeated wandered required in.</p>
                         </div>
                     </div>
-                </div>
-                <div class="about-card">
+                </article>
+                <article class="about-card">
                     <div class="about-card-holder">
                         <div class="card-image">
                             <img class="hero-image" src="images/undraw_destinations_fpv7.svg" alt="Journey image">
@@ -97,12 +96,43 @@
                             <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. On it differed repeated wandered required in.</p>
                         </div>
                     </div>
+                </article>
+            </div>
+    </section>
+    <!--end about-us-->
+
+    <!--Start  destination -->
+    <section id="destination" class="destination padding-top-bottom">
+        <div class="container">
+            <div class="destination-text">
+                <h2 class="about-h2">Popular Places</h2>
+            </div>
+            <div class="destination-images-container">
+                <div class="destination-image-holder seventeen-percent">
+                    <img class="hero-image" src="images/place5.jpg" alt="place-1">
+                </div>
+                <div class="destination-image-holder">
+                    <img class="hero-image" src="images/place2.jpg" alt="place-2">
+                </div>
+                <div class="destination-image-holder ">
+                    <img class="hero-image" src="images/place3.jpg" alt="place-3">
+                </div>
+                <div class="destination-image-holder seventeen-percent">
+                    <img class="hero-image" src="images/place1.jpg" alt="place-4">
+                </div>
+                <div class="destination-image-holder ">
+                    <img class="hero-image" src="images/place5.jpg" alt="place-3">
+                </div>
+                <div class="destination-image-holder ">
+                    <img class="hero-image" src="images/place2.jpg" alt="place-3">
+                </div>
+                <div class="destination-image-holder ">
+                    <img class="hero-image" src="images/place1.jpg" alt="place-3">
                 </div>
             </div>
         </div>
     </section>
-    <!--end about-us-->
-
+    <!--end  destination -->
 
     <script src="js/main.js"></script>
 </body>
