working on destination section

--- a/index.html
+++ b/index.html
@@ -109,25 +109,62 @@
             </div>
             <div class="destination-images-container">
                 <div class="destination-image-holder seventeen-percent">
-                    <img class="hero-image" src="images/place5.jpg" alt="place-1">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place5.jpg" alt="place-1">
+                    </div>
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3>Place name here</h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="destination-image-holder">
                     <img class="hero-image" src="images/place2.jpg" alt="place-2">
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3>Place name here</h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="destination-image-holder ">
                     <img class="hero-image" src="images/place3.jpg" alt="place-3">
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3>Place name here</h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="destination-image-holder seventeen-percent">
                     <img class="hero-image" src="images/place1.jpg" alt="place-4">
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3>Place name here</h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="destination-image-holder ">
                     <img class="hero-image" src="images/place5.jpg" alt="place-3">
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3>Place name here</h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="destination-image-holder ">
                     <img class="hero-image" src="images/place2.jpg" alt="place-3">
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3>Place name here</h3>
+                        </div>
+                    </div>
                 </div>
                 <div class="destination-image-holder ">
                     <img class="hero-image" src="images/place1.jpg" alt="place-3">
+                    <div class="hero-image-text">
+                        <div class="place-name-text">
+                            <h3>Place name here</h3>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
