--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                     </div>
                 </div>
                 <div class="destination-image-holder">
-                    <img class="hero-image" src="images/place2.jpg" alt="place-2">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place2.jpg" alt="place-2">
+                    </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
                             <h3>Place name here</h3>
@@ -127,7 +129,9 @@
                     </div>
                 </div>
                 <div class="destination-image-holder ">
-                    <img class="hero-image" src="images/place3.jpg" alt="place-3">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place3.jpg" alt="place-3">
+                    </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
                             <h3>Place name here</h3>
@@ -135,7 +139,9 @@
                     </div>
                 </div>
                 <div class="destination-image-holder seventeen-percent">
-                    <img class="hero-image" src="images/place1.jpg" alt="place-4">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place1.jpg" alt="place-4">
+                    </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
                             <h3>Place name here</h3>
@@ -143,7 +149,9 @@
                     </div>
                 </div>
                 <div class="destination-image-holder ">
-                    <img class="hero-image" src="images/place5.jpg" alt="place-3">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place5.jpg" alt="place-3">
+                    </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
                             <h3>Place name here</h3>
@@ -151,7 +159,9 @@
                     </div>
                 </div>
                 <div class="destination-image-holder ">
-                    <img class="hero-image" src="images/place2.jpg" alt="place-3">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place2.jpg" alt="place-3">
+                    </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
                             <h3>Place name here</h3>
@@ -159,7 +169,9 @@
                     </div>
                 </div>
                 <div class="destination-image-holder ">
-                    <img class="hero-image" src="images/place1.jpg" alt="place-3">
+                    <div class="background-holder">
+                        <img class="hero-image" src="images/place1.jpg" alt="place-3">
+                    </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
                             <h3>Place name here</h3>
@@ -173,5 +185,9 @@
 
     <script src="js/main.js"></script>
 </body>
+
+</html>
+
+</html>
 
 </html>
