am done with the destination section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/5a0dddbca3.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display|Sacramento&display=swap" rel="stylesheet" />
     <title>Mountain Travel</title>
 </head>
 
@@ -107,6 +108,146 @@
             <div class="destination-text">
                 <h2 class="about-h2">Popular Places</h2>
             </div>
+            <div class="destination-cards-container ">
+                <div class="destination-card-holder">
+                    <div class="card-image-holder">
+                        <img class="hero-image" src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Golden Gate Bridge, San Francisco, United States">
+                    </div>
+                    <div class="card-text-holder">
+                        <div class="card-text">
+                            <h3 class="about-h2">Golden Gate Bridge</h3>
+                            <p class="">San Francisco, United States</p>
+                        </div>
+                    </div>
+                    <div class="card-rate-container">
+                        <div class="rate">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="far fa-star"></i></li>
+                            </ul>
+                            <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="destination-card-holder">
+                    <div class="card-image-holder">
+                        <img class="hero-image" src="https://images.unsplash.com/photo-1456693906521-44e96e49e85f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Beverly Hills, United States">
+                    </div>
+                    <div class="card-text-holder">
+                        <div class="card-text">
+                            <h3 class="about-h2">Beverly Hills </h3>
+                            <p class="">United States</p>
+                        </div>
+                    </div>
+                    <div class="card-rate-container">
+                        <div class="rate">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="far fa-star"></i></li>
+                            </ul>
+                            <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="destination-card-holder">
+                    <div class="card-image-holder">
+                        <img class="hero-image" src="https://images.unsplash.com/photo-1534430480872-3498386e7856?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Manhattan, New York, United States">
+                    </div>
+                    <div class="card-text-holder">
+                        <div class="card-text">
+                            <h3 class="about-h2">Manhattan </h3>
+                            <p class=""> New York, United States</p>
+                        </div>
+                    </div>
+                    <div class="card-rate-container">
+                        <div class="rate">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="far fa-star"></i></li>
+                            </ul>
+                            <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="destination-card-holder">
+                    <div class="card-image-holder">
+                        <img class="hero-image" src="https://images.unsplash.com/photo-1580628646333-99de91e7e8ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Banyan Tree Bintan, Sebong Lagoi, Bintan Regency, Riau Islands, Indonesia">
+                    </div>
+                    <div class="card-text-holder">
+                        <div class="card-text">
+                            <h3 class="about-h2">Banyan Tree Bintan</h3>
+                            <p class=""> Riau Islands, Indonesia</p>
+                        </div>
+                    </div>
+                    <div class="card-rate-container">
+                        <div class="rate">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="far fa-star"></i></li>
+                            </ul>
+                            <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="destination-card-holder">
+                    <div class="card-image-holder">
+                        <img class="hero-image" src="https://images.unsplash.com/photo-1519046904884-53103b34b206?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Rio de Janeiro, Brazil">
+                    </div>
+                    <div class="card-text-holder">
+                        <div class="card-text">
+                            <h3 class="about-h2">Rio de Janeiro, Brazil</h3>
+                            <p class=""> Brazil</p>
+                        </div>
+                    </div>
+                    <div class="card-rate-container">
+                        <div class="rate">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="far fa-star"></i></li>
+                            </ul>
+                            <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="destination-card-holder">
+                    <div class="card-image-holder">
+                        <img class="hero-image" src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Golden Gate Bridge, San Francisco, United States">
+                    </div>
+                    <div class="card-text-holder">
+                        <div class="card-text">
+                            <h3 class="about-h2">Golden Gate Bridge</h3>
+                            <p class="">San Francisco, United States</p>
+                        </div>
+                    </div>
+                    <div class="card-rate-container">
+                        <div class="rate">
+                            <ul>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="far fa-star"></i></li>
+                            </ul>
+                            <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="destination-images-container">
                 <div class="destination-image-holder seventeen-percent">
                     <div class="background-holder">
@@ -114,7 +255,7 @@
                     </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
-                            <h3>Place name here</h3>
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </div>
@@ -124,7 +265,7 @@
                     </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
-                            <h3>Place name here</h3>
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </div>
@@ -134,7 +275,7 @@
                     </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
-                            <h3>Place name here</h3>
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </div>
@@ -144,7 +285,7 @@
                     </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
-                            <h3>Place name here</h3>
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </div>
@@ -154,7 +295,7 @@
                     </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
-                            <h3>Place name here</h3>
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </div>
@@ -164,7 +305,7 @@
                     </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
-                            <h3>Place name here</h3>
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </div>
@@ -174,7 +315,7 @@
                     </div>
                     <div class="hero-image-text">
                         <div class="place-name-text">
-                            <h3>Place name here</h3>
+                            <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
                 </div>
