--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <section id="destination" class="destination padding-top-bottom">
         <div class="container">
             <div class="destination-text">
-                <h2 class="about-h2">Popular Places</h2>
+                <h2 class="about-h2">Destination</h2>
             </div>
             <div class="destination-cards-container ">
                 <div class="destination-card-holder">
@@ -124,11 +124,15 @@
                             <ul>
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="far fa-star"></i></li>
                                 <li><i class="far fa-star"></i></li>
                             </ul>
                             <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <p class="duration-time">5 Days</p>
                         </div>
                     </div>
                 </div>
@@ -148,10 +152,14 @@
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="fas fa-star"></i></li>
                                 <li><i class="far fa-star"></i></li>
                             </ul>
                             <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <p class="duration-time">7 Days</p>
                         </div>
                     </div>
                 </div>
@@ -171,10 +179,14 @@
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star-half-alt"></i></li>
-                                <li><i class="far fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
                             </ul>
                             <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <p class="duration-time">5 Days</p>
                         </div>
                     </div>
                 </div>
@@ -194,10 +206,14 @@
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
+                                <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star-half-alt"></i></li>
-                                <li><i class="far fa-star"></i></li>
                             </ul>
                             <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <p class="duration-time">8 Days</p>
                         </div>
                     </div>
                 </div>
@@ -216,11 +232,15 @@
                             <ul>
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star"></i></li>
-                                <li><i class="fas fa-star-half-alt"></i></li>
+                                <li><i class="far fa-star"></i></li>
+                                <li><i class="far fa-star"></i></li>
                                 <li><i class="far fa-star"></i></li>
                             </ul>
                             <p class="card-reviews">(20 Reviews)</p>
+                        </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <p class="duration-time">14 Days</p>
                         </div>
                     </div>
                 </div>
@@ -245,8 +265,15 @@
                             </ul>
                             <p class="card-reviews">(20 Reviews)</p>
                         </div>
+                        <div class="duration">
+                            <i class="far fa-clock"></i>
+                            <p class="duration-time">3 Days</p>
+                        </div>
                     </div>
                 </div>
+            </div>
+            <div class="destination-text">
+                <h2 style="width: 100%; display: block;" class="about-h2">Popular Places</h2>
             </div>
             <div class="destination-images-container">
                 <div class="destination-image-holder seventeen-percent">
