making improvements for the HTML file

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <!--Start header-->
     <header class="header">
         <nav id="navbar" class="navbar">
-            <div class="logo-container">
+            <section class="logo-container">
                 <div class="logo-holder">
                     <h2 class="logo">Mountain Travel</h2>
                 </div>
-            </div>
-            <div class="list-container">
+            </section>
+            <section class="list-container">
                 <div class="navbar-list" id="navbar-not-responsive">
                     <!-- removing the custom transition will remove the lag-->
                     <ul class="navbar-ul ">
@@ -29,14 +29,14 @@
                         <li><a class="navbar-link" onclick="myFunction()" rel="noopener" href="#">Contact</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="bar-container">
+            </section>
+            <section class="bar-container">
                 <input type="checkbox" id="check" onclick="myFunction()">
                 <label for="check" class="bar-icon-label">
                     <i id="my-icon" class="fa fa-bars" aria-hidden="true"></i>
                     <i style="display: none;" id="my-iconX"  class="fas fa-times" aria-hidden="true"></i>
                 </label>
-            </div>
+            </section>
         </nav>
     </header>
     <!--end header-->
@@ -59,12 +59,12 @@
     <!--Start about-us-->
     <section id="about-us" class="about-us padding-top-bottom">
         <div class="container">
-            <div class="about-text">
+            <section class="about-text">
                 <h2 class="about-h2">Tour package</h2>
                 <p class="about-p">On it differed repeated wandered required in. Then girl neat why yet knew rose spot. Moreover property we he kindness greatest be oh striking laughter. In me he at collecting affronting principles apartments. Has visitor law attacks pretend
                     you calling own excited painted.Contented active her warmly has. </p>
-            </div>
-            <div class="outer-holder">
+            </section>
+            <section class="outer-holder">
                 <article class="about-card">
                     <div class="about-card-holder">
                         <div class="card-image">
@@ -98,7 +98,8 @@
                         </div>
                     </div>
                 </article>
-            </div>
+            </section>
+        </div>
     </section>
     <!--end about-us-->
 
@@ -106,10 +107,10 @@
     <section id="destination" class="destination padding-top-bottom">
         <div class="container">
             <div class="destination-text">
-                <h2 class="about-h2">Destination</h2>
+                <h2 class="about-h2">Popular Destination</h2>
             </div>
-            <div class="destination-cards-container ">
-                <div class="destination-card-holder">
+            <section class="destination-cards-container ">
+                <article class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Golden Gate Bridge, San Francisco, United States">
                     </div>
@@ -128,15 +129,15 @@
                                 <li><i class="far fa-star"></i></li>
                                 <li><i class="far fa-star"></i></li>
                             </ul>
-                            <p class="card-reviews">(20 Reviews)</p>
+                            <p class="card-reviews">(15 Reviews)</p>
                         </div>
                         <div class="duration">
                             <i class="far fa-clock"></i>
                             <p class="duration-time">5 Days</p>
                         </div>
                     </div>
-                </div>
-                <div class="destination-card-holder">
+                </article>
+                <article class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1456693906521-44e96e49e85f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Beverly Hills, United States">
                     </div>
@@ -155,15 +156,15 @@
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="far fa-star"></i></li>
                             </ul>
-                            <p class="card-reviews">(20 Reviews)</p>
+                            <p class="card-reviews">(30 Reviews)</p>
                         </div>
                         <div class="duration">
                             <i class="far fa-clock"></i>
                             <p class="duration-time">7 Days</p>
                         </div>
                     </div>
-                </div>
-                <div class="destination-card-holder">
+                </article>
+                <article class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1534430480872-3498386e7856?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Manhattan, New York, United States">
                     </div>
@@ -182,15 +183,15 @@
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star"></i></li>
                             </ul>
-                            <p class="card-reviews">(20 Reviews)</p>
+                            <p class="card-reviews">(89 Reviews)</p>
                         </div>
                         <div class="duration">
                             <i class="far fa-clock"></i>
                             <p class="duration-time">5 Days</p>
                         </div>
                     </div>
-                </div>
-                <div class="destination-card-holder">
+                </article>
+                <article class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1580628646333-99de91e7e8ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Banyan Tree Bintan, Sebong Lagoi, Bintan Regency, Riau Islands, Indonesia">
                     </div>
@@ -209,15 +210,15 @@
                                 <li><i class="fas fa-star"></i></li>
                                 <li><i class="fas fa-star-half-alt"></i></li>
                             </ul>
-                            <p class="card-reviews">(20 Reviews)</p>
+                            <p class="card-reviews">(75 Reviews)</p>
                         </div>
                         <div class="duration">
                             <i class="far fa-clock"></i>
                             <p class="duration-time">8 Days</p>
                         </div>
                     </div>
-                </div>
-                <div class="destination-card-holder">
+                </article>
+                <article class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1519046904884-53103b34b206?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Rio de Janeiro, Brazil">
                     </div>
@@ -236,15 +237,15 @@
                                 <li><i class="far fa-star"></i></li>
                                 <li><i class="far fa-star"></i></li>
                             </ul>
-                            <p class="card-reviews">(20 Reviews)</p>
+                            <p class="card-reviews">(120 Reviews)</p>
                         </div>
                         <div class="duration">
                             <i class="far fa-clock"></i>
                             <p class="duration-time">14 Days</p>
                         </div>
                     </div>
-                </div>
-                <div class="destination-card-holder">
+                </article>
+                <article class="destination-card-holder">
                     <div class="card-image-holder">
                         <img class="hero-image" src="https://images.unsplash.com/photo-1501594907352-04cda38ebc29?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1189&q=80" alt="Golden Gate Bridge, San Francisco, United States">
                     </div>
@@ -263,20 +264,20 @@
                                 <li><i class="fas fa-star-half-alt"></i></li>
                                 <li><i class="far fa-star"></i></li>
                             </ul>
-                            <p class="card-reviews">(20 Reviews)</p>
+                            <p class="card-reviews">(45 Reviews)</p>
                         </div>
                         <div class="duration">
                             <i class="far fa-clock"></i>
                             <p class="duration-time">3 Days</p>
                         </div>
                     </div>
-                </div>
-            </div>
+                </article>
+            </section>
             <div class="destination-text">
-                <h2 style="width: 100%; display: block;" class="about-h2">Popular Places</h2>
+                <h2 style="width: 100%; display: block;" class="about-h2">Recent Trips</h2>
             </div>
-            <div class="destination-images-container">
-                <div class="destination-image-holder seventeen-percent">
+            <section class="destination-images-container">
+                <article class="destination-image-holder seventeen-percent">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place5.jpg" alt="place-1">
                     </div>
@@ -285,8 +286,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </div>
-                <div class="destination-image-holder">
+                </article>
+                <article class="destination-image-holder">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place2.jpg" alt="place-2">
                     </div>
@@ -295,8 +296,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </div>
-                <div class="destination-image-holder ">
+                </article>
+                <article class="destination-image-holder ">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place3.jpg" alt="place-3">
                     </div>
@@ -305,8 +306,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </div>
-                <div class="destination-image-holder seventeen-percent">
+                </article>
+                <article class="destination-image-holder seventeen-percent">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place1.jpg" alt="place-4">
                     </div>
@@ -315,8 +316,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </div>
-                <div class="destination-image-holder ">
+                </article>
+                <article class="destination-image-holder ">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place5.jpg" alt="place-3">
                     </div>
@@ -325,8 +326,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </div>
-                <div class="destination-image-holder ">
+                </article>
+                <article class="destination-image-holder ">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place2.jpg" alt="place-3">
                     </div>
@@ -335,8 +336,8 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </div>
-                <div class="destination-image-holder ">
+                </article>
+                <article class="destination-image-holder ">
                     <div class="background-holder">
                         <img class="hero-image" src="images/place1.jpg" alt="place-3">
                     </div>
@@ -345,11 +346,29 @@
                             <h3><i style="margin-right: 5px;" class="fas fa-map-marker-alt"></i> Lijiang, Yunnan, Chine</h3>
                         </div>
                     </div>
-                </div>
-            </div>
+                </article>
+            </section>
         </div>
     </section>
     <!--end  destination -->
+    <!--Start  price -->
+    <section class="padding-top-bottom">
+        <div class="container">
+            <div class="price-card-container">
+                <div class="price-card"></div>
+            </div>
+        </div>
+    </section>
+    <!--end  price -->
+    <!--Start  footer -->
+    <footer>
+        <div class="container">
+
+        </div>
+    </footer>
+    <!--end  footer -->
+
+
 
     <script src="js/main.js"></script>
 </body>
